<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:id="@+id/constraint_settings"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background1"
    tools:context=".view.SettingsActivity">

    <TextView
        android:id="@+id/title_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_title_activity_settings"
        android:textColor="?attr/colorSurface"
        android:textSize="42sp"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textStyle="italic|bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <RelativeLayout
        android:id="@+id/relative_notify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_settings">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:text="@string/text_notification"
            android:textAllCaps="true"
            android:textColor="?attr/colorSurface"
            android:textSize="24sp"
            android:textStyle="italic|bold" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_change_notify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/SCBSwitch"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:thumb="@drawable/thumb"
            app:track="@drawable/track" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_black_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relative_notify">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:text="@string/text_black_theme"
            android:textAllCaps="true"
            android:textColor="?attr/colorSurface"
            android:textSize="24sp"
            android:textStyle="italic|bold" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_change_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:thumb="@drawable/thumb"
            app:track="@drawable/track"
            android:theme="@style/SCBSwitch"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_change_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relative_black_theme">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:text="@string/text_background"
            android:textAllCaps="true"
            android:textColor="?attr/colorSurface"
            android:textSize="24sp"
            android:textStyle="italic|bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/change_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:background="@drawable/rounded_button"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="5dp"
            android:radius="15dp"
            android:text="@string/text_change_btn"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="?attr/colorSurface"
            android:textSize="20sp"
            android:textStyle="italic|bold" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>